--- a/index.html
+++ b/index.html
@@ -1,67 +1,55 @@
-
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
+	<!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine"> -->
+	<link rel="stylesheet" href="./fonts/Poppins/Poppins-Black.ttf">
+	<link rel="stylesheet" href="./styles/styles.css">
+
 	<title>2 SMR</title>
-
-	<style>
-		
-		body{
-			background: green;
-			color: white;
-			font-size: 20px;
-		}
-
-		h2{
-			background: white;
-			color: green;
-			text-align: center;
-			text-transform: uppercase;
-
-
-		}
-
-         h1{
-         	background: white;
-         	color: green;
-         	font-size: 45px;
-         	text-align: center;
-         }
-
-
-
-
-	2 </style>
 </head>
-<body>
-	<h1>Sistemas microinformaticos y redes</h1>
 
-	<h2><em>SISTEMAS OPERATIVOS EN RED</em></h2>
+<body>
+	<h1>Sistemas y blah estamos editando la web microinformaticos y redes</h1>
+
+	<h2 class="sor"><em>SISTEMAS OPERATIVOS EN RED</em></h2>
 
 	<img src="imagenes/sistemasop.jpg" height="200px" width="200px" alt="SISTEMAS OPERATIVOS EN RED">
-	<p>Un sistema de red operativo, también llamado N.O.S (en inglés, Network Operating System), es un software que permite la interconexión de ordenadores para poder acceder a los servicios y recursos, hardware y software, creando redes de computadoras. Al igual que un equipo no puede trabajar sin un sistema operativo, una red de equipos no puede funcionar sin un sistema operativo de red. Consiste en un software que posibilita la comunicación de un sistema informático con otros equipos en el ámbito de una red.</p>
+	<p>Un sistema de red operativo, también llamado N.O.S (en inglés, Network Operating System), es un software que
+		permite la interconexión de ordenadores para poder acceder a los servicios y recursos, hardware y software,
+		creando redes de computadoras. Al igual que un equipo no puede trabajar sin un sistema operativo, una red de
+		equipos no puede funcionar sin un sistema operativo de red. Consiste en un software que posibilita la
+		comunicación de un sistema informático con otros equipos en el ámbito de una red.</p>
 
 	<a href="./sistemas.html">sistemas</a>
 
-	<h2><em>APLICACIONES WEB</em></h2>
+	<h2 class="webapps"><em>APLICACIONES WEB</em></h2>
 	<img src="imagenes/apwebs.jpg" height="200px" width="200px" alt="APLICACIONES WEB">
 
-	<p>En la ingeniería de software se denomina aplicación web (al igual se le denomina como "Software Web") es aquella herramienta que los usuarios pueden utilizar accediendo a un servidor web a través de internet o de una intranet mediante un navegador. </p>
+	<p id="parrafo-unico">En la ingeniería de software se denomina aplicación web (al igual se le denomina como "Software Web") es aquella
+		herramienta que los usuarios pueden utilizar accediendo a un servidor web a través de internet o de una intranet
+		mediante un navegador. </p>
 	<a href="aplicaciones.html">apps web</a>
 
 	<h2><em>SERVICIOS EN RED</em> </h2>
 	<img src="imagenes/servred.jpg" height="200px" width="200px" alt="SERVICIOS EN RED">
 
-	<p>Un servicio de red es la creación de una red de trabajo en un ordenador. Generalmente los servicios de red son instalados en uno o más firewalls del servidor seleccionado. Eso facilita el uso y el fallo de muchos usuarios.</p>
+	<p>Un servicio de red es la creación de una red de trabajo en un ordenador. Generalmente los servicios de red son
+		instalados en uno o más firewalls del servidor seleccionado. Eso facilita el uso y el fallo de muchos usuarios.
+	</p>
 
 	<h2><em>SEGURIDAD INFORMATICA</em></h2>
 	<img src="imagenes/segin.jpg" height="200px" width="200px" alt="SEGURIDAD INFORMATICA">
 
-	<p>La seguridad informática, también conocida como ciberseguridad,1​ es el área relacionada con la informática y la telemática que se enfoca en la protección de la infraestructura computacional y todo lo vinculado con la misma, y especialmente la información contenida en una computadora o circulante a través de las redes de computadoras.2</p>
+	<p>La seguridad informática, también conocida como ciberseguridad,1​ es el área relacionada con la informática y la
+		telemática que se enfoca en la protección de la infraestructura computacional y todo lo vinculado con la misma,
+		y especialmente la información contenida en una computadora o circulante a través de las redes de computadoras.2
+	</p>
 
 
 
 
 </body>
+
 </html>
